--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "rxjs": "~7.8.0",
+    "three": "^0.172.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -29,6 +30,7 @@
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/three": "^0.171.0",
     "cypress": "^13.17.0",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
