--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "material": "ng add @angular/material",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -43,10 +44,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.2.2",
+    "@angular/cdk": "^19.2.14",
     "@angular/common": "^19.2.2",
     "@angular/compiler": "^19.2.2",
     "@angular/core": "^19.2.2",
     "@angular/forms": "^19.2.2",
+    "@angular/material": "^19.2.14",
     "@angular/platform-browser": "^19.2.2",
     "@angular/platform-browser-dynamic": "^19.2.2",
     "@angular/router": "^19.2.2",
