--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "hash": "ng g s services/utilities/hash",
     "platform": "ng g s services/utilities/platform",
     "iappmodel": "ng g i interfaces/st/appmodel/stAppModel",
-    "sappmodelservice": "ng g s services/appmodel/appmodel"
+    "sappmodelservice": "ng g s services/appmodel/appmodel",
+    "cappMenu": "ng g c components/appMenu",
+    "suiservice": "ng g s services/ui/ui"
   },
   "private": true,
   "dependencies": {
@@ -65,6 +67,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/three": "^0.171.0",
     "cypress": "^13.17.0",
+    "cypress-plugin-tab": "^1.0.5",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
