--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "cappLayoutMenu": "ng g c components/appLayoutMenu",
     "clicore20": "ng update @angular/core@20 @angular/cli@20",
     "mat20": "ng update @angular/material@20",
-    "cappTabularLayout": "ng g c components/layouts/appTabularLayout"
+    "cappTabularLayout": "ng g c components/layouts/appTabularLayout",
+    "cappUpdateLayout": "ng g c components/layouts/appUpdateLayout"
   },
   "private": true,
   "dependencies": {
