--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "sViewPortResize": "ng g s services/ui/wViewPortResize",
     "clicore21": "ng update @angular/core@21 @angular/cli@21",
     "mat21": "ng update @angular/material@21",
-    "sDebounce": "ng g s services/utilities/timing/debounce"
+    "sDebounce": "ng g s services/utilities/timing/debounce",
+    "sstAnimation": "ng g s services/entities/st/animation/stAnimation"
   },
   "private": true,
   "dependencies": {
