--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "clicore21": "ng update @angular/core@21 @angular/cli@21",
     "mat21": "ng update @angular/material@21",
     "sDebounce": "ng g s services/utilities/timing/debounce",
-    "sstAnimation": "ng g s services/entities/st/animation/stAnimation"
+    "sstAnimation": "ng g s services/entities/st/animation/stAnimation",
+    "sAnimation": "ng g s services/entities/three/animation/threeAnimation",
+    "classVizPosition": "ng g class services/utilities/positioning/vizComponentLayout.class"
   },
   "private": true,
   "dependencies": {
